--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+title: My theme for the Exercise
+description: Time machine theme for GitHub Pages.
+theme: jekyll-theme-time-machine
+
+
 # helloWorld
 helloWorld package was created to exemplify GitHub and R Studio Integration.
 ### Note
