--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,11 @@
+remote_theme: pages-themes/time-machine@v0.2.0
+plugins:
+  - jekyll-remote-theme  # add this line if it's not already present
+
 title: My theme for the Exercise
 description: Time machine theme for GitHub Pages.
-theme: jekyll-theme-time-machine
+show_downloads: false
 
 
-# helloWorld
-helloWorld package was created to exemplify GitHub and R Studio Integration.
-### Note
-3
-Please consult this [link]( https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax) for more information about formatting.
-To install a GitHub Pakage in R you may need *devtools*. If so, please run the following code:
-```R
-if (!requireNamespace("devtools", quietly = TRUE))
-install.packages("devtools")
-```
-You can install an R package that is publicly available in GitHub by using the following code (replacing **GitHubName/repo** with the correct information):
-```R
-devtools::install_github('GitHubName/repo')
-```
+
+
