--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
-  - jekyll-remote-theme  # add this line if it's not already present
+  - jekyll-remote-theme
 
 title: My theme for the Exercise
 description: Time machine theme for GitHub Pages.
